methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: ';' expected but 'return' found.
    }  return false
       ^